# destiny2-bounty-tracker

./: .gitignore  .gitmodules  README.md  download_manifests.py  fix_mappings.py  localhost-key.pem  localhost.pem  pyproject.toml  unmapped.json
webapp/: package-lock.json  package.json  vue.config.js
webapp/public/: index.html
webapp/src/: App.vue  client.js  definitions.js  devUtils.js  formatting.js  main.js  mapping.js  models.js  oauth.js  utils.js
webapp/src/components/: CharacterObjectives.vue  Characters.vue  Objective.vue  ObjectivesCategory.vue  ObjectivesList.vue  Quests.vue
webapp/src/components/Debug/: MappingDebugger.vue  MappingDebuggerObjective.vue
webapp/src/definitions/: DestinyObjectiveDefinition.json  DestinyPresentationNodeDefinition.json
webapp/src/plugins/: vuetify.js
